GeglNode: Don't invalidate the source when connecting two nodes

https://bugzilla.gnome.org/show_bug.cgi?id=761495